<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/backup">

        <Preference
            android:key="@string/create_backup"
            android:summary="@string/create_backup_summary"
            android:title="@string/create_backup_title" />

        <Preference
            android:key="@string/load_backup"
            android:summary="@string/load_backup_summary"
            android:title="@string/load_backup_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/database">

        <Preference
            android:key="@string/clear_database"
            android:summary="@string/clear_database_summary"
            android:title="@string/clear_database_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/default_dir">

        <Preference
            android:key="@string/default_dir"
            android:summary="@string/default_string"
            android:title="@string/default_title" />

        <Preference
            android:key="@string/reset_default_dir"
            android:title="@string/reset_default_dir_title" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
